fix: try to fix jumpy bg on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -8,3 +8,12 @@
   filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3)
     brightness(0.7) opacity(0.9);
 }
+
+html {
+  overflow: hidden;
+}
+
+body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
